--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
-    "@zeit/next-sass": "^0.1.2",
+    "@zeit/next-sass": "^1.0.1",
     "antd": "^3.15.1",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0"
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "webpack": "^4.29.6"
   }
 }
