--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "now-build": "next build",
+    "start": "NODE_ENV=production node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "name": "imgur",
   "version": "1.0.0",
@@ -15,7 +18,7 @@
     "@babel/preset-env": "^7.4.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^3.15.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "gh-pages": "^2.0.1",
     "webpack": "^4.29.6"
   }
 }
