--- a/now.json
+++ b/now.json
@@ -1,4 +1,29 @@
 {
   "version": 2,
-  "builds": [{ "src": "package.json", "use": "@now/next" }]
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/next",
+      "config": {
+        "maxLambdaSize": "20mb"
+      }
+    },
+    {
+      "src": "static/*",
+      "use": "@now/static"
+    },
+    {
+      "src": "server.js",
+      "use": "@now/node-server",
+      "config": {
+        "maxLambdaSize": "20mb"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/catch/(.*)",
+      "dest": "/server.js"
+    }
+  ]
 }
