--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "setup": "pm2 deploy ecosystem.config.js production setup",
+    "deploy": "pm2 deploy ecosystem.config.js production --force"
   },
   "name": "imgur",
   "version": "1.0.0",
@@ -29,8 +29,10 @@
     "js-cookie": "^2.2.0",
     "next": "^8.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.2",
-    "node-sass": "^4.11.0",
+    "nginx": "0.0.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.10",
+    "now": "^15.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
