--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
+    "@next/bundle-analyzer": "^9.2.2",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^3.15.1",
     "axios": "^0.19.0",
