Select avatar account

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.4",
     "immer": "^2.1.4",
     "js-cookie": "^2.2.0",
+    "luxbar": "^0.3.2",
     "next": "^8.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "nginx": "0.0.0",
