--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.8.4",
     "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
