--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-cookies": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.4",
+    "react-masonry-component": "^6.2.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
