--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-define": "^1.3.1",
     "cookie-parser": "^1.4.4",
+    "emoji-mart": "^3.0.0",
     "express": "^4.16.4",
     "immer": "^2.1.4",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.15",
     "luxbar": "^0.3.2",
-    "next": "^8.0.3",
+    "next": "^9.3.5",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "nginx": "0.0.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.18.10",
+    "nodemon": "^2.0.3",
     "now": "^15.5.0",
     "react": "^16.8.4",
     "react-cookie": "^4.0.3",
