--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.15",
     "luxbar": "^0.3.2",
+    "moment": "^2.26.0",
     "next": "^9.3.5",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "nginx": "0.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.3",
     "now": "^15.5.0",
     "react": "^16.8.4",
@@ -43,12 +44,15 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.4",
     "react-masonry-component": "^6.2.1",
+    "react-notifications": "^1.6.0",
     "react-redux": "^6.0.1",
     "react-slick": "^0.26.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
